# src/models/index.js
@@ -1,4 +1,5 @@
 const User = require("./User");
 const Product = require("./Product");
+const Order = require("./Order");
 
-module.exports = { User, Product };
+module.exports = { User, Product, Order};
